2008-08-08  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/vp6/flv*:
	Remove old files.
	* flumotion/component/encoders/vp6/vp6.xml:
	Add vp6-component which contains an __init__.py a vp6.py

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/Makefile.am:
	  Fix admin_gtk.py
	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/mp3/mp3.py:
	  Change rate property name to samplerate.
	* flumotion/component/encoders/aac/wizard_gtk.py:
	* flumotion/component/encoders/mp3/wizard_gtk.py:
	* flumotion/component/encoders/vp6/wizard_gtk.py:
	  Add pychecker suppressions for our widget magic.

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/mp3/mp3.xml:
	* flumotion/component/encoders/vp6/vp6.xml:
	* flumotion/component/muxers/flv/flv.xml:
	  Fix _description everywhere.

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/admin_gtk.py (added):
	* flumotion/component/encoders/flv/flv_wizard.py (deleted):
	  Rename.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Bump to 0.5.0.1

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/vp6/Makefile.am:
	* flumotion/component/encoders/vp6/wizard_gtk.py (added):
	* flumotion/component/encoders/vp6/admin_gtk.py (deleted):
	* flumotion/component/encoders/vp6/flv_wizard.py (deleted):
	  Further moving and fixing, pass distcheck again.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/flv/vp6.py (deleted):
	* flumotion/component/encoders/flv/vp6_wizard.py (deleted):
	* flumotion/component/encoders/flv/vp6-wizard.glade (deleted):
	  Further splitting/cutting/renaming
