@@ -98,6 +98,7 @@ flumotion/component/encoders/aac/Makefile
 flumotion/component/encoders/mp3/Makefile
 flumotion/component/encoders/flv/Makefile
 flumotion/component/encoders/vp6/Makefile
+flumotion/component/encoders/h264/Makefile
 flumotion/component/muxers/Makefile
 flumotion/component/muxers/flv/Makefile
 flumotion/component/plugs/Makefile
