@@ -4,7 +4,8 @@ SUBDIRS = \
 	aac \
 	flv \
 	mp3 \
-	vp6
+	vp6 \
+	h264
 
 # We do not install __init__.py since it would override flumotion's
 EXTRA_DIST = __init__.py
